Bug 152311 - New Address Block field has black font when using system dark mode
Summary: New Address Block field has black font when using system dark mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.7.2 release
Hardware: x86-64 (AMD64) All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: regression
Depends on:
Blocks: Mail-Merge UI-Theming
  Show dependency treegraph
 
Reported: 2022-11-30 11:52 UTC by Stéphane Guillou (stragu)
Modified: 2022-12-01 11:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2022-11-30 11:52:35 UTC
Steps:
0. Use GNOME's dark mode
1. LibreOffice Writer > Tools > Mail Merge Wizard... > Next > Next > select address list (use whatever list you have)
2. Click "more" next to address blocks > New...
3. Text is black in dark grey

Actual results:
Poor contrast, looks out of place.

Expected results:
Should be white like default UI font in dark mode.

Versions:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 01a3cc1e55034f7703219d4bbb209de7c37bf07b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Started in 6.4:

Version: 6.4.7.2
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

No repro in:

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

Caolán, though you might be interested given that you were recently in this dialog.
Comment 1 Stéphane Guillou (stragu) 2022-11-30 11:57:31 UTC
Ah, not GTK3-specific, reproducible with kf5:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And not even linux-specific:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: deb7bc82de19ea8e20c767fdf21f9ba4feb5e9f0
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 2 Stéphane Guillou (stragu) 2022-11-30 11:58:17 UTC
(so can be reproduced using LO 7.5 and Windows 10 dark mode)
Comment 3 Commit Notification 2022-11-30 16:18:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/885092535ce812d08227d46edd2e86387510b3ef

Resolves: tdf#152311 inform EditEngine what the bg color is

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2022-11-30 16:18:45 UTC
done in trunk, backport to 7-4 in gerrit
Comment 5 Commit Notification 2022-11-30 18:15:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/b4b5f5dd525e42f4d2958d44d7015bbbcf7f67b9

Resolves: tdf#152311 inform EditEngine what the bg color is

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2022-12-01 11:44:42 UTC
Verified in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1a5d548b96d86ad7ca04c2b23dc18517a538a998
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Caolán!