Resolves: tdf#152311 inform EditEngine what the bg color is

so it can pick an appropiate color for "auto"

Change-Id: I6dba73a72ccb3106baf4b12ff8052b372e749a49
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143501
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>